--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<h2><a href="#">Python Corrrelation <br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/vg.jpeg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/corr.png" alt="" /></a>
 									<p>( Movie industry dataset ) – Visualized correlation matrices using Seaborn & used SciPy to establish whether correlation coefficients are statistically significant.
 										.</p>
 									<ul class="actions special">
