--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 										<h2><a href="#">Tableau<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/tableau.png" alt="" /></a>
+									<a href="https://public.tableau.com/app/profile/sahana.baskar" class="image fit"><img src="images/tableau.png" alt="" /></a>
 									<p>Created visualizations on Covid 19 & Nashville Housing Dataset.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
