--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
 									<header>
 										
 										<h2><a href="#">Single Cell RNA <br />
-										Seq Analysis</a></h2>
+										Seq Analyzer</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/scRNA seq -NSCLC.png" alt="" /></a>
-									<p> Utilized Seurat standard workflow to identify differentially expressed genes & cell types in Non-Small Cell Lung Cancer dataset using linear dimensionality reduction.
+									<p> Developed and deployed custom R Shiny app that provides a user-friendly interface for data visualization. This app enables users to visualize UMAP and tSNE plots, and to view scatterplots based on sex, sample IDs, and age. 
 									</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Saha-na42/scRNA-Analysis-using-Seurat-" class="button">View Project</a></li>
+										<li><a href="https://github.com/Saha-na42/R-shiny-Application---scRNA-seq-Analyzer" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
